# wine-classification

./: .env.example  .gitignore  README.md  todo.md
Code/: preprocesing.ipynb  pyproject.toml  test_dataloader.py
Code/artifacts/: Target=3_statistics.tex  all_statistics.tex
Code/artifacts/grid_search/: all_seed_results.csv  summary_mean_std.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_0/: history.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_1/: history.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_2/: history.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_3/: history.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_4/: history.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_5/: history.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_6/: history.csv
Code/artifacts/grid_search/large_2_hidden_32_16_lr_0_001/seed_7/: history.csv
Code/artifacts/training_results/tables/: final_test_metrics.tex  test_sensitivity_specificity.tex
Code/scripts/: dataloader.py  hyperparameter_search.py  main.py  train_test.py
Code/scripts/data/: __init__.py  batch_loader.py  dataset.py  preprocessing.py  splitting.py  tabular_data_loader.py  wine_dataset.py
Code/scripts/neural_network/: __init__.py  activations.py  layers.py  losses.py  metrics.py  mlp.py  optimizers.py  types.py
Code/scripts/reporting/: __init__.py  training_report.py
Code/scripts/training/: __init__.py  trainer.py
Code/scripts/utils/: types.py  utils.py
(+207 files in other folders)
